Add verse styles to Valuspa and Havamal

--- a/havamal.adoc
+++ b/havamal.adoc
@@ -1,5 +1,6 @@
 = Den höges sång
 
+[verse]
 1. Alla dörrar, 
 innan in man går, 
 skarpt skådas skola, 
@@ -8,6 +9,7 @@ ty ovisst är att veta,
 var ovänner sitta 
 borta på salens bänkar.
 
+[verse]
 2. I givande, hell er! 
 Gäst är in kommen, 
 Sägen, var sitta han skall! 
@@ -15,6 +17,7 @@ Brått har den,
 som på bränderna vid härden 
 skall fresta, vad framgång han får.
 
+[verse]
 3. Eld behöver, 
 den in har kommit, 
 och kall har blivit om knäna. 
@@ -22,6 +25,7 @@ Mat och kläder
 den man tarvar, 
 som har över fjällen farit.
 
+[verse]
 4. Vatten tarvar 
 vandrarn, som kommer till måltid, 
 handduk och vänlig välkomst; 
@@ -29,6 +33,7 @@ välvilligt sinne,
 om han sådant kan vinna, 
 samspråk och bjudning tillbaka.
 
+[verse]
 5. Vett behöver, 
 den som vida färdas; 
 lätt är hemma vadhelst. 
@@ -36,6 +41,7 @@ Mång ögonkast får,
 den som intet förstår 
 och sitter med kloka tillsammans.
 
+[verse]
 6. Över sitt förstånd 
 skall man stolt ej vara, 
 fasthellre i väsendet varsam! 
@@ -46,6 +52,7 @@ ty osvikligare vän
 man aldrig får 
 än mycket mannavett.
 
+[verse]
 7. Den varsamme gästen, 
 som till gille kommer 
 tiger under lyssnande tystnad; 
@@ -53,6 +60,7 @@ med öronen hör efter,
 med ögonen skådar, 
 så spanar var klok och spejar.
 
+[verse]
 8. Säll är den, 
 som åt sig vinner, 
 lovord och lisa i nöden. 
@@ -60,6 +68,7 @@ Otryggt är allt,
 som man äga skall, 
 buret i andras bröst.
 
+[verse]
 9. Säll är den, 
 som för sig äger 
 lovord och förstånd uti livet, 
@@ -67,6 +76,7 @@ ty onda anslag
 man ofta rönt 
 alstras ur andras bröst.
 
+[verse]
 10. Bättre börda 
 man bär ej på vägen 
 än mycket mannavett. 
@@ -74,6 +84,7 @@ På främmande ort
 går det framför guld. 
 Slikt är den torftiges tillflykt.
 
+[verse]
 11. Bättre börda 
 man bär ej på vägen 
 än mycket mannavett. 
@@ -81,6 +92,7 @@ Sämre vägkost
 man ej släpar över fältet 
 än övermått utav öl.
 
+[verse]
 12. Ej är så gott, 
 som gott man säger, 
 öl för människors ätt; 
@@ -88,6 +100,7 @@ ty mindre en man,
 ju mera han dricker, 
 vet till sig, vad tankar han har.
 
+[verse]
 13. Glömskans häger heter, 
 den över glatt lag svävar; 
 han snattar från män deras sans. 
@@ -95,6 +108,7 @@ Med den fågelns fjädrar
 jag fjättrad blev 
 i Gunnlods gård.
 
+[verse]
 14. Drucken jag blev, 
 blev döddrucken 
 hos den förfarne Fjalar. 
@@ -102,6 +116,7 @@ Gille är ypperst,
 då var gäst går hem 
 med sinnen i full sans.
 
+[verse]
 15. Tyst och klok 
 vare konungason, 
 och djärv, när strid står; 
@@ -109,6 +124,7 @@ munter och glad
 bland män envar, 
 tills han av döden drabbas!
 
+[verse]
 16. Ovis man 
 tror sig alltid skola leva, 
 om för vapenskifte han sig aktar, 
@@ -116,6 +132,7 @@ men ålderdomen giver
 honom ingen frid, 
 fast honom spjuten spara.
 
+[verse]
 17. En gäck stirrar, 
 när han till gille kommer; 
 han talar om allt eller tiger; 
@@ -123,6 +140,7 @@ på samma gång,
 som en sup han får, 
 då är det slut med hans slughet.
 
+[verse]
 18. Blott den vet, 
 som vida reser 
 och fjärran farit har, 
@@ -130,6 +148,7 @@ vad lynnesart
 leder envar. 
 Han vet, vad vett är.
 
+[verse]
 19. Håll ej på hornet, 
 drick dock hovsamt själv, 
 tala, vad som höves, eller tig! 
@@ -137,6 +156,7 @@ För det okynnet
 ingen dig tadlar, 
 att du tidigt sängen söker.
 
+[verse]
 20. Glupske slukaren, 
 om besinning han ej vet, 
 äter sig ohälsa. 
@@ -144,6 +164,7 @@ Löje skaffar ofta
 i lag med okloka 
 åt enfaldig man hans mage.
 
+[verse]
 21. Hjordar veta 
 när vända hem de skola, 
 och gånga då från gräset, 
@@ -151,6 +172,7 @@ men ovis man
 aldrig känner 
 sin egen mages mått.
 
+[verse]
 22. En eländig man 
 och illasinnad 
 gör hån åt vad som helst; 
@@ -158,6 +180,7 @@ det vet han icke,
 som han veta behövde, 
 att honom fel ej fattas.
 
+[verse]
 23. Ovis man 
 alla nätter vakar, 
 grubblar och grämer sig för allt; 
@@ -165,6 +188,7 @@ matt är han,
 när morgonen kommer; 
 vedermödan är, som den var.
 
+[verse]
 24. Ovis man 
 tror alla vara 
 vänner, som vänligt le; 
@@ -172,6 +196,7 @@ han förstår icke,
 fast de stämpla mot honom, 
 om han bland sluga sitter.
 
+[verse]
 25. Ovis man 
 tror alla vara 
 vänner, som vänligt le; 
@@ -179,6 +204,7 @@ när på tinget han kommer,
 det ter sig klart, 
 att få hans talan föra.
 
+[verse]
 26. Ovis man 
 tror sig allt veta. 
 när i vrå i skygd han vistas; 
@@ -186,6 +212,7 @@ men slätt han vet,
 vad han svara skall, 
 när män hans förmåga fresta.
 
+[verse]
 27. Ovis man, 
 som bland andra kommer, 
 gör bäst i att tyst förbliva; 
@@ -196,6 +223,7 @@ Ingen känner
 den, som ingenting vet, 
 om icke för ymnigt han ordar.
 
+[verse]
 28. Klok den synes, 
 som kunnig är 
 att spörja och spörsmål besvara. 
@@ -203,6 +231,7 @@ Hemligt aldrig
 kan hållas sådant, 
 som går ifrån mun till mun.
 
+[verse]
 29. Alltför mycket talar, 
 den som aldrig tiger, 
 av ord med ingen mening. 
@@ -210,6 +239,7 @@ Hastig tunga,
 som ej hålles i styr, 
 ofta sig ofärd pratar.
 
+[verse]
 30. Till ögnagyckel 
 skall man annan ej hava, 
 om han gör som gäst besök. 
@@ -217,6 +247,7 @@ Klok mången tyckes,
 om han ej tilltalas, 
 och helskinnad hållas han får.
 
+[verse]
 31. Klok förefaller, 
 den till flykten tager, 
 en gäst, som är hånfull mot gäst. 
@@ -224,6 +255,7 @@ Föga den vet,
 som flinar vid måltid, 
 om han med gramsne ej glammar.
 
+[verse]
 32. Många män 
 med mångprövad vänskap 
 gyckla med varandra vid gillet. 
@@ -231,6 +263,7 @@ Alltid det är
 ett upphov till strid, 
 att gäst tvistar med gäst.
 
+[verse]
 33. På morgonen en man, 
 sig måltid rikligt skaffe, 
 om han till bekanta ej kommer; 
@@ -238,6 +271,7 @@ annars sitter han och snappar,
 som svulten han vore, 
 och kan föga fråga.
 
+[verse]
 34. Stor omväg 
 till ovän är, 
 fast vid vägen hans stuga stode; 
@@ -245,6 +279,7 @@ men till god vän
 på gen vägar, 
 vore han än fjärran faren.
 
+[verse]
 35. Gå skall man, 
 ej är gott, att gäst 
 är ständigt på samma ställe. 
@@ -252,6 +287,7 @@ Ljuv bliver led,
 om länge kvar 
 på en annans bänk han bliver.
 
+[verse]
 36. Ett bo är bäst, 
 fast blott helt litet, 
 herre är hemma envar. 
@@ -259,6 +295,7 @@ Fast man tågor har till tak
 och blott två getter äger, 
 är det bättre än bedja om mat.
 
+[verse]
 37. Ett bo är bäst, 
 fast blott helt litet, 
 herre är hemma envar. 
@@ -266,6 +303,7 @@ blödande är hjärtat
 på den, som bedja skall 
 sig mat till varje mål.
 
+[verse]
 38. Från sina vapen 
 ej vike en man 
 på fältet ett enda fjät, 
@@ -273,6 +311,7 @@ ty ovisst är att veta,
 när ute på vägen 
 spjutets spets kan tarvas.
 
+[verse]
 39. Ej så givmild man 
 eller gästfri jag fann, 
 att ej åt gåvor han gladdes, 
@@ -280,6 +319,7 @@ eller så litet snål
 på sitt gods, 
 att led vore lön, om han finge.
 
+[verse]
 40. Den som välstånd 
 förvärvat har, 
 skall torftighet ej tåla; 
@@ -287,6 +327,7 @@ ofta spars åt okär,
 vad åt älskling var ämnat; 
 mycket går värre, än man väntat.
 
+[verse]
 41. Med vapen och kläder 
 glädje vänner varandra! 
 Själv man skönjer det bäst. 
@@ -294,6 +335,7 @@ Genom gengåvor vänskapen
 varar längst; 
 om annars det vill sig väl.
 
+[verse]
 42. Till sin vän 
 skall man vän vara 
 och vedergälla gåva med gåva; 
@@ -301,6 +343,7 @@ med löje skall man
 löje gälda 
 och försök att lura med lögn.
 
+[verse]
 43. Till sin vän 
 skall man vän vara, 
 till honom och hans vän; 
@@ -308,6 +351,7 @@ men till oväns vän
 skall ingen man 
 någonsin vän vara.
 
+[verse]
 44. Vet du, om vän du har, 
 som du väl tror 
 och gott av honom vill hava; 
@@ -315,6 +359,7 @@ förtrolig skall du vara
 och vängåvor skifta, 
 träffa honom titt och ofta.
 
+[verse]
 45. Om du har en annan, 
 som du illa tror, 
 och av honom dock gott vill hava; 
@@ -322,6 +367,7 @@ fagert skall du tala
 men falskt tänka 
 och vedergälla list med lögn.
 
+[verse]
 46. Ytterligare gäller 
 om den, du illa tror 
 och vars onda sinne du anar: 
@@ -329,6 +375,7 @@ mot honom skall du le
 och låtsa vänskap; 
 samma gåva åt givaren gälda.
 
+[verse]
 47. Ung var jag fordom 
 och for ensammen, 
 då råkade jag vilse om vägen; 
@@ -336,6 +383,7 @@ jag tyckte mig rik,
 då jag träffade en annan: 
 man är mans gamman.
 
+[verse]
 48. Modiga och givmilda 
 män leva bäst, 
 nära sällan sorg; 
@@ -343,6 +391,7 @@ men fåvitsk man
 fruktar allt möjligt, 
 sörjer alltid snål vid gåvor.
 
+[verse]
 49. Med kläderna mina 
 jag klädde på fältet 
 tvänne gubbar av trä; 
@@ -350,6 +399,7 @@ hela karlar de tycktes,
 när en klut de hade; 
 nesligt är naken vara.
 
+[verse]
 50. Tallen torkar, 
 som på tomten står, 
 och ej skyddas av bark eller barr; 
@@ -357,6 +407,7 @@ så är ock en,
 som ingen älskar. 
 Vi skall han länge leva?
 
+[verse]
 51. Om ock hetare än eld 
 med osäkra vänner 
 brinner fem dagars fred, 
@@ -364,6 +415,7 @@ så slocknar den dock,
 när sex de bliva, 
 och vissnar all vänskap.
 
+[verse]
 52. Mycket skall 
 ej mannen giva, 
 ofta får han lovord för litet; 
@@ -371,6 +423,7 @@ med hälften av en bulle
 och med bägare på lut 
 vann jag mig en vän.
 
+[verse]
 53. Små sandstränder, 
 små sjöar, 
 små äro människors sinnen. 
@@ -378,6 +431,7 @@ Ej samtliga män
 fingo samma visdom; 
 ovis överallt är enhälft.
 
+[verse]
 54. Medelmåttigt klok 
 var man skall vara, 
 aldrig vara alltför klok. 
@@ -385,6 +439,7 @@ Bland män är livet
 mest fagert för dem, 
 som väl veta mycket.
 
+[verse]
 55. Medelmåttigt klok 
 var man skall vara, 
 aldrig vara alltför klok. 
@@ -392,6 +447,7 @@ Klok mans sinne
 är sällan glatt, 
 om allvis han är, som det äger.
 
+[verse]
 56. Medelmåttigt klok 
 var man skall vara, 
 aldrig vara alltför klok. 
@@ -399,6 +455,7 @@ Sitt öde vete
 ingen på förhand; 
 då är honom sorglösast sinnet.
 
+[verse]
 57. Brand brinner av brand, 
 tills han brunnen är, 
 låga tändes av låga. 
@@ -406,6 +463,7 @@ Den ene för den andre
 genom ord blir känd, 
 och den alltför slöe genom slapphet.
 
+[verse]
 58. Arla stige upp, 
 den som äga vill 
 en annan egendom eller liv! 
@@ -413,6 +471,7 @@ Sällan liggande ulv
 ett lårstycke får 
 eller sovande man seger.
 
+[verse]
 59. Arla stige upp 
 som har arbetsfolk få, 
 och tage med sin syssla i tu! 
@@ -420,6 +479,7 @@ Mycket försinkas
 för den, om morgonen sover; 
 rask är till hälften rik.
 
+[verse]
 60. Av torrt trä 
 och taknäver 
 en man måttet känner, 
@@ -427,6 +487,7 @@ och vad ved
 vara kan 
 ett helt kvartal eller halvår.
 
+[verse]
 61. Tvagen och mätt 
 ride mannen till tinget, 
 fast klent han är klädd! 
@@ -435,6 +496,7 @@ ej skamsen någon vare,
 ej heller över hästen, 
 fast han har en dålig!
 
+[verse]
 62. Han far och fikar 
 med framåtböjt huvud 
 örnen på urgammalt hav; 
@@ -442,6 +504,7 @@ så ock den man,
 som bland många kommer 
 och har förespråkare få.
 
+[verse]
 63. Frågor den göre 
 och give svar, 
 som klok vill kallas! 
@@ -449,6 +512,7 @@ En må få veta,
 en andre icke; 
 veta det tre, så vet världen.
 
+[verse]
 64. En klok man 
 skall kuva sitt lynne, 
 sin härsklystnad hålla i tygel. 
@@ -456,10 +520,12 @@ Då han märker,
 när bland modiga han kommer, 
 att ingen är djärv framför alla.
 
+[verse]
 65. För de ord, 
 som till andra man har sagt, 
 ofta man bitter får böta.
 
+[verse]
 66. Mycket för tidigt 
 kom jag på många ställen 
 men alltför sent på somliga; 
@@ -467,6 +533,7 @@ drucket var ölet,
 obryggt ibland; 
 sällan kommer led till lags.
 
+[verse]
 67. Här och var 
 man mig hem hade bjudit, 
 om ej mat till målen jag behövt, 
@@ -474,6 +541,7 @@ eller två lår hängt
 hos den trofaste vännen, 
 sedan ett jag ätit hade.
 
+[verse]
 68. Elden är bäst 
 för barn av människor 
 och solens syn, 
@@ -481,6 +549,7 @@ och om sin hälsa
 man hava får 
 och leva utan last.
 
+[verse]
 69. En man är ej olycklig, 
 fast usel till hälsan; 
 mången är av söner säll, 
@@ -488,6 +557,7 @@ mången av fränder,
 mången av fullt upp med gods, 
 mången av välgjort verk.
 
+[verse]
 70. Bättre är leva 
 än att liv sakna; 
 vid liv, får sig karl alltid ko. 
@@ -495,6 +565,7 @@ Eld såg jag brinna
 i bål åt den rike, 
 och död låg han utanför dörren.
 
+[verse]
 71. Den halte rider häst, 
 den handen mist, blir herde, 
 den döve duger i strid. 
@@ -502,6 +573,7 @@ Blind är bättre
 än att bränd vara; 
 ej av någon nytta är liket.
 
+[verse]
 72. En son är bättre, 
 fastän sent född, 
 sedan faderns levnad är liden. 
@@ -509,11 +581,13 @@ Sällan bautastenar
 man ser vid vägen, 
 om ej frände över frände dem rest.
 
+[verse]
 73. Två äro stridsmän: 
 tungan dödar huvudet; 
 under varje päls 
 jag väntar en hand.
 
+[verse]
 74. Med fröjd den natten motser, 
 som matsäck har att njuta, 
 Kort räcka skepps rår, 
@@ -522,6 +596,7 @@ På fem dagar växlar
 vädret mycket 
 men mer på en månad.
 
+[verse]
 75. Den icke något vet, 
 som ingenting vet; 
 av rikedom mången röjes som narr. 
@@ -529,6 +604,7 @@ Den ene är rik,
 den andre fattig, 
 lägg ej den det till last!
 
+[verse]
 76. Fä dör, 
 fränder dö, 
 även själv skiljes du hädan, 
@@ -538,6 +614,7 @@ för envar, som ett gott har vunnit.
 
 image::ed0002.jpg[]
 
+[verse]
 77. Fä dör, 
 fränder dö, 
 även själv skiljes du hädan, 
@@ -545,6 +622,7 @@ men ett vet jag,
 som aldrig dör, 
 domen över död man.
 
+[verse]
 78. Fulla fårfållor 
 såg jag hos Fitjungs söner, 
 nu traska de med tiggarens stav. 
@@ -552,6 +630,7 @@ nu traska de med tiggarens stav.
 som en ögonblink, 
 vankelmodigast av vänner.
 
+[verse]
 79. En ovis man, 
 om han erhålla kan 
 gods eller kvinnors gunst, 
@@ -559,6 +638,7 @@ hans stolthet växer,
 men förståndet icke, 
 i dårskap går han duktigt långt.
 
+[verse]
 80. Det rönes då, 
 när om runor du spörjer, 
 om de stavar, som från gudarne stamma, 
@@ -566,6 +646,7 @@ som höga makter höggo,
 och skaldefebern skar, 
 då tyckes det bäst, att han tiger.
 
+[verse]
 81. Om kvällen skall dagen prisas, 
 gift kvinna, då hon bränd är, 
 svärdet, då det frestat är, 
@@ -573,6 +654,7 @@ flicka, då hon gift är;
 is, då man över kommer, 
 öl, då det drucket är.
 
+[verse]
 82. I blåsväder skall skog man fälla, 
 i bris ro ut på öppet hav, 
 i mörkret med mö språka, 
@@ -582,6 +664,7 @@ och skölden till skydd hava,
 till fäktning svärdet 
 och flickan att kyssa.
 
+[verse]
 83. Vid eld skall man öl dricka, 
 på isen skridsko åka, 
 en kamp skall man mager köpa, 
@@ -589,6 +672,7 @@ en klinga med rost uppå;
 hemma skall man höst göda 
 men hund i fäbod.
 
+[verse]
 84. På ord av en mö 
 må ingen man lita, 
 eller tro på gift kvinnas tal; 
@@ -596,6 +680,7 @@ ty på rullande hjul
 deras hjärta är skapat, 
 föränderlighet i bröstet inlagd.
 
+[verse]
 85. Bristande båge, 
 brinnande låga, 
 glupande ulv, 
@@ -605,6 +690,7 @@ gran utan rot,
 växande våg, 
 vällande gryta.
 
+[verse]
 86. Flygande spjut, 
 fallande bölja, 
 is, blott nattgammal, 
@@ -614,11 +700,13 @@ ett brustet svärd,
 björnens lek, 
 ett barn av en konung.
 
+[verse]
 87. En sjuk kalv, 
 en självrådig träl, 
 en foglig vala, 
 de nyss fallne i striden.
 
+[verse]
 88. Tidigt sådd åker 
 må ingen tro, 
 och ej för snart sin son; 
@@ -626,6 +714,7 @@ av vädret beror åkern,
 av sitt vett sonen, 
 båda tvivelaktiga ting.
 
+[verse]
 89. Din broders mördare, 
 om han mötes på vägen, 
 ett halvbrunnet hus, 
@@ -635,6 +724,7 @@ om ett ben skadas -
 ingen vare så lättrogen, 
 att han litar på allt detta!
 
+[verse]
 90. Kärlek av kvinnor, 
 som känna falskhet, 
 är som med häst utan broddar 
@@ -646,6 +736,7 @@ med ett styreslöst skepp
 eller som halt man på töfjäll 
 skulle taga en ren.
 
+[verse]
 91. Bar sanning jag talar, 
 ty båda jag känner: 
 karlars tro mot kvinnor även vacklar. 
@@ -653,6 +744,7 @@ Då tala vi fagrast,
 när vi falskast tänka, 
 det snärjer ock kloka sinnen.
 
+[verse]
 92. Fagert skall man tala, 
 friarskänk bjuda, 
 om en flickas kärlek man vill få, 
@@ -660,6 +752,7 @@ den ljuslätta ungmöns
 älsklighet prisa; 
 då får, den som friar.
 
+[verse]
 93. För älskog lasta 
 aldrig man skall 
 sin nästa någonsin; 
@@ -667,6 +760,7 @@ ofta verkar på den vise
 men på vettlös man ej 
 bedårande däjlighet.
 
+[verse]
 94. Ty ingalunda lasta 
 en annan man skall 
 för fel, som är fleras; 
@@ -674,6 +768,7 @@ till galna från kloka
 gör karlars söner 
 älskogs mäktiga åtrå.
 
+[verse]
 95. Blott själen gömmer, 
 vad i hjärtat bor, 
 ensam sin känsla han känner. 
@@ -681,6 +776,7 @@ Ingen sjukdom är värre
 för en själfull man 
 än att leva, med intet belåten.
 
+[verse]
 96. Det varsnade jag, 
 då i vassen jag satt 
 för att möta min älskade mö; 
@@ -688,6 +784,7 @@ kött och blod
 mig min käresta var, 
 och dock jag ingenting av henne fick.
 
+[verse]
 97. Billings mö 
 jag i bädden fann 
 solvit sova. 
@@ -695,6 +792,7 @@ En jarls härlighet
 höll jag för intet 
 mot att med denna förlederska leva.
 
+[verse]
 98. »Nära afton 
 du, Oden, skall komma, 
 om mö di dig vinna vill; 
@@ -702,6 +800,7 @@ allt går illa,
 om ej ensamma vi 
 slik sak veta.»
 
+[verse]
 99. Åter jag kom 
 och älska mig tyckte; 
 vist var ej, vad jag ville. 
@@ -709,6 +808,7 @@ Jag hoppades då,
 att jag hava skulle 
 all hennes kärlek och tjusning.
 
+[verse]
 100. När jag kom fram, 
 fick jag där se 
 hela vakten av kämpar vaken, 
@@ -716,6 +816,7 @@ med burna bloss
 och brinnande ljus; 
 min väg sig visade farlig.
 
+[verse]
 101. Och nära morgonen, 
 när jag närmade mig åter, 
 då sov salens vakt. 
@@ -723,6 +824,7 @@ En hynda jag då fann
 på det hulda vivets 
 bädd bunden ligga.
 
+[verse]
 102. Mången mö god, 
 om man mönstrar noga, 
 lätt ändrar sitt lynne mot män. 
@@ -733,6 +835,7 @@ allehanda smälek
 den sluga mig ådrog, 
 och intet jag fick av den flickan.
 
+[verse]
 103. Man skall glad i hemmet vara. 
 och glamma med gäster, 
 dock förståndigt man sörje för sitt; 
@@ -743,6 +846,7 @@ omtala ofta det goda.
 som har intet att säga; 
 det är de ovisas art.
 
+[verse]
 104. Åldrig jätte jag besökte, 
 nu är åter jag kommen; 
 där föga jag fick med att tiga. 
@@ -752,6 +856,7 @@ i Suttungs salar.
 
 image::ed0003.jpg[]
 
+[verse]
 105. Gunnlod mig gav 
 på guldstolen 
 en dryck av det dyrbara mjödet. 
@@ -760,6 +865,7 @@ lät jag henne få
 för hennes ärliga ömhet, 
 för hennes lidelses längtan.
 
+[verse]
 106. Borrens mun 
 lät jag bana mig väg 
 och gång i stenen gnaga; 
@@ -767,6 +873,7 @@ jag över och under
 omgavs av jättars väg; 
 då gällde det hals och huvud.
 
+[verse]
 107. Av skickligt vunnen skönhet 
 har jag skickligt mig begagnat, 
 den kunnige föga fattas; 
@@ -774,6 +881,7 @@ ty Odrörer
 har nu upp kommit, 
 dit, där människor bygga och bo.
 
+[verse]
 108. Ovisst är, 
 om än jag kommit 
 igen från jättars gårdar, 
@@ -781,6 +889,7 @@ om ej av Gunnlod jag hjälpts,
 den goda flickan, 
 som jag fick i famnen sluta.
 
+[verse]
 109. Följande dag rimtursarne 
 att fråga gingo 
 om den Höges gifte 
@@ -789,6 +898,7 @@ efter Bolverk de sporde,
 om tillbaka han kommit 
 eller Suttung ihjäl honom slagit.
 
+[verse]
 110. Ed på ring tror jag Oden 
 avlagt hava; 
 hur kan man på hans löften lita? 
@@ -796,6 +906,7 @@ Med svek han mjödet
 från Sutting tog, 
 och i gråt han lämnade Gunnlod.
 
+[verse]
 111. Tid är att förtälja 
 på talarens stol, 
 som vid Urds brunn är. 
@@ -808,6 +919,7 @@ vid den Höges sal,
 i den Höges sal 
 hörde jag sägas så.
 
+[verse]
 112. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -816,6 +928,7 @@ Stig ej upp om natten,
 om du ej är ute och spanar 
 eller måste ut på gården gå!
 
+[verse]
 113. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -824,6 +937,7 @@ Sov ej hos kvinna,
 som är kunnig i trolldom, 
 så att hon i famnen dig fängslar!
 
+[verse]
 114. Hon gör det så, 
 att du ger varken akt, 
 om till ting eller konungen du kallas; 
@@ -831,6 +945,7 @@ mat du vill ej hava
 eller människors umgänge; 
 sorgsen går du att sova.
 
+[verse]
 115. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -839,6 +954,7 @@ En annans hustru
 du aldrig locke 
 att förtroligt med dig tala!
 
+[verse]
 116. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -847,6 +963,7 @@ Om på fjäll eller fjärd
 du fara lyster 
 skaffa dig riklig reskost!
 
+[verse]
 117. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -858,6 +975,7 @@ ty av en elak man
 du aldrig får 
 för lämnat förtroende lön.
 
+[verse]
 118. Svårt tilltygad 
 såg jag en man 
 genom ord av en ond kvinna; 
@@ -865,6 +983,7 @@ falsk tunga
 tog hans liv, 
 och dock ej för sann sak.
 
+[verse]
 119. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -876,6 +995,7 @@ ty av ris höljes
 och högt gräs 
 den väg, som ingen vandrar.
 
+[verse]
 120. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -884,6 +1004,7 @@ En god man du locke
 till gamman och förtrolighet; 
 lär dig tjusa folk att hålla dig kär!
 
+[verse]
 121. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -895,6 +1016,7 @@ sorg fräter hjärtat,
 när man säga ej får 
 för någon hela sin hug.
 
+[verse]
 122. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -903,6 +1025,7 @@ Ord skifta,
 aldrig du skall 
 med dåraktig dumbom.
 
+[verse]
 123. Ty av illasinnad man 
 du aldrig skall 
 få gott med gott lönat. 
@@ -910,6 +1033,7 @@ Men en god man
 dig gagnar med sitt lov 
 och gör dig omtyckt av andra.
 
+[verse]
 124. Lik släktskap är vänskap, 
 då man säga får 
 en annan hela sin hug. 
@@ -917,6 +1041,7 @@ Allt är bättre
 än vara brått föränderlig; 
 den är ej vän, som blott välkommet säger.
 
+[verse]
 125. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -926,6 +1051,7 @@ i träta med en usling;
 den bättre är ofta böjlig, 
 när den sämre slår.
 
+[verse]
 126. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -937,6 +1063,7 @@ om sokn är illa skapad
 eller skaftet snett, 
 då önskas över dig ont.
 
+[verse]
 127. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -945,6 +1072,7 @@ Om ont du märker,
 säg, att ont det är, 
 och giv ej din fiende frid.
 
+[verse]
 128. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -953,6 +1081,7 @@ de bli goda att begagna.
 aldrig var, 
 men gläds åt det goda!
 
+[verse]
 129. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -963,6 +1092,7 @@ titta ej uppåt
 drabbar männen - 
 att icke förtrollning dig träffar.
 
+[verse]
 130. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -974,6 +1104,7 @@ fagert skall du lova
 och fast löftet hålla; 
 den blir glad, som får något gott.
 
+[verse]
 131. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -985,6 +1116,7 @@ och med annas hustru,
 och med det tredje, 
 att ej dig toppride tjuvar.
 
+[verse]
 132. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -993,6 +1125,7 @@ Till hån och löje
 hav aldrig 
 gäst eller främling, som färdas!
 
+[verse]
 133. Ofta illa veta, 
 de som inne sitta, 
 vad slags folk, som farande komma. 
@@ -1000,6 +1133,7 @@ Ingen är så bra,
 att ej brist han äger, 
 eller så dålig, att till intet han duger.
 
+[verse]
 134. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -1013,6 +1147,7 @@ sådant som hänger bland hudar
 och slänger bland småskinn 
 och lätt dinglar bland löpmagar.
 
+[verse]
 135. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -1021,6 +1156,7 @@ En gäst du skall ej skymfa
 eller jaga på porten; 
 fägna den fattige väl!
 
+[verse]
 136. Ej svag är den dörrtapp, 
 som svänga skall 
 och öppna för alla. 
@@ -1028,6 +1164,7 @@ En ring du dock giv,
 eller på din rygg 
 allt ont de dig önska.
 
+[verse]
 137. Jag råder dig, Loddfavner, 
 men råd må du taga; 
 du får fördel, om du följer dem, 
@@ -1044,6 +1181,7 @@ bete mot bitsjuka,
 bot mot ont äro runor, 
 mot fluss är fast mark.
 
+[verse]
 138. Jag vet, att jag hängde 
 på det vindiga trädet 
 nio hela nätter, 
@@ -1054,6 +1192,7 @@ uppe i det träd,
 varom ingen vet, 
 av vad rot det runnit upp.
 
+[verse]
 139. Man bröd mig ej bar 
 eller bjöd mig horn, 
 skarpt jag nedåt skådade; 
@@ -1061,6 +1200,7 @@ jag tog upp runor,
 med rop jag tog dem, 
 så föll jag åter därifrån.
 
+[verse]
 140. Nio kraftsånger lärde jag 
 av namnkunnig son 
 till Boltorn, Bestlas fader, 
@@ -1068,6 +1208,7 @@ och en dryck jag fick,
 av det dyrbara mjödet, 
 som östes ur Odrörer.
 
+[verse]
 141. Då tog jag att förkovras 
 och kunnig vara, 
 att växa och väl trivas; 
@@ -1078,6 +1219,7 @@ verk alstrade.
 
 image::ed0004.jpg[]
 
+[verse]
 142. Runor skall du finna, 
 rätt uttydda stavar, 
 mycket stora stavar, 
@@ -1086,6 +1228,7 @@ som skaldefadern skar
 och gudamakter grovo 
 och de rådandes herre ristade.
 
+[verse]
 143. Oden bland asarne 
 men för alferna Dain 
 och Dvalin för dvärgarna, 
@@ -1093,6 +1236,7 @@ Allsvinn åt jättar
 gjorde runor, 
 några runor jag ristade själv.
 
+[verse]
 144. Vet du, hur du rista skall? 
 Vet du, hur du reda skall? 
 Vet du, hur du färga skall? 
@@ -1102,6 +1246,7 @@ Vet du, hur du blota skall?
 Vet du, hur du sända skall? 
 Vet du, hur du slopa skall?
 
+[verse]
 145. Bättre är intet bedja 
 än att blota för mycket; 
 gåva önskar, att gengåva gives. 
@@ -1112,6 +1257,7 @@ före tidsåldrarna,
 när han reste sig upp, 
 när han återkom.
 
+[verse]
 146. De kraftsånger kan jag, 
 som ej konungens maka 
 och ingen mans ättling kan. 
@@ -1120,10 +1266,12 @@ och hjälpa dig den skall
 mot processer och sorger 
 och samtliga lidanden.
 
+[verse]
 147. Den nästa, jag kan, 
 är nödig för dem, 
 som vilja som läkare leva.
 
+[verse]
 148. Den tredje jag kan, 
 om det tarvas mig få 
 fjättrar åt fiender mina; 
@@ -1131,6 +1279,7 @@ eggen jag dövar
 på mina ovänners svärd, 
 att deras klingor och knölpåkar ej bita.
 
+[verse]
 149. Den fjärde jag kan, 
 om fiender på mig 
 med band ha lemmarne bundit. 
@@ -1139,6 +1288,7 @@ så att gå jag kan;
 från foten fjättern springer 
 och från handen handkloven.
 
+[verse]
 150. Den femte jag kan, 
 om fiendepil skjuten 
 jag falla i flocken ser; 
@@ -1146,6 +1296,7 @@ så häftigt han ej flyger,
 att jag hejdar honom ej, 
 om blott min syn honom sett.
 
+[verse]
 151. Den sjätte jag säger, 
 om mig sårar en man 
 genom runor på rötter av träd, 
@@ -1153,6 +1304,7 @@ och för denne fyr,
 som min fiendskap kräver, 
 det blir menligt mera än för mig.
 
+[verse]
 152. Den sjunde jag kan, 
 om själva salen jag ser 
 brinna kring bänkat lag; 
@@ -1160,6 +1312,7 @@ lågan slår ej så högt
 att jag släcker den ej, 
 slik galder, som jag säga kan.
 
+[verse]
 153. Den åttonde jag kan, 
 som för alla är 
 lämplig att lära; 
@@ -1167,6 +1320,7 @@ när hat uppstår
 bland hövdings söner, 
 jag botar det brått.
 
+[verse]
 154. Den nionde jag kan, 
 om mig nöd hotar, 
 att bärga min båt på hav; 
@@ -1174,6 +1328,7 @@ vinden jag stillar
 på vågen ute 
 och sjunger all sjö i sömn.
 
+[verse]
 155. Den tionde jag kan, 
 om trollkvinnor jag ser 
 högt i luften leka. 
@@ -1182,6 +1337,7 @@ att de vilse fara
 om skepnaden, de själva äga, 
 om själen, som de själva ha.
 
+[verse]
 156. Den elfte jag kan, 
 om till örlog jag skall 
 gå med gamla vänner. 
@@ -1191,6 +1347,7 @@ utan sår till slaget,
 utan sår från slaget, 
 komma helbrägda från vad som helst.
 
+[verse]
 157. Den tolfte jag kan, 
 om uppi träd jag ser 
 hängda döda dingla. 
@@ -1199,6 +1356,7 @@ och runor färgar,
 att den kroppen kommer 
 och talar mig till.
 
+[verse]
 158. Den trettonde jag brukar, 
 om ett barn jag skall 
 genom vattenösning viga. 
@@ -1206,6 +1364,7 @@ Stupa han skall ej,
 fast i strid han kommer, 
 ej segnar denne krigare för svärd.
 
+[verse]
 159. Den fjortonde jag kan, 
 om för folkets skara 
 jag skall tälja gudars tal; 
@@ -1213,6 +1372,7 @@ asar och alfer
 jag alla vet besked om; 
 den ej kunnig är, det ej kan.
 
+[verse]
 160. Den femtonde jag kan, 
 som Tjodreyrer sjöng, 
 en dvärg framför Dellings dörr; 
@@ -1220,6 +1380,7 @@ kraft han sjöng åt asar
 och åt alfer framgång, 
 förstånd åt stridernas gud.
 
+[verse]
 161. Den sextonde jag kan, 
 om den sluga möns 
 lidelse och lust jag vill hava. 
@@ -1227,6 +1388,7 @@ Hågen jag vänder
 hos vitarmad kvinna 
 och förändrar all hennes själ.
 
+[verse]
 162. Den sjuttonde jag kan, 
 att sent skiljes från mig 
 den ungmö, jag älskar. 
@@ -1237,6 +1399,7 @@ Men de äro goda som gåva,
 nyttiga att nå, 
 behövliga att hava.
 
+[verse]
 163. Den adertonde jag kan, 
 som jag aldrig lär 
 åt mö eller mans hustru - 
@@ -1247,6 +1410,7 @@ utom åt henne
 som med armen mig famnar 
 eller åt mig syster är.
 
+[verse]
 164. Nu är den Höges sång framsagd 
 i den Höges sal, 
 gagnrik för människors söner, 
